--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
     "react-resizable": "^3.0.5",
-    "react-router": "^6.14.2"
+    "react-router": "^6.14.2",
+    "react-router-dom": "^6.15.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
